# word-mcp-server

./: .gitignore  .mcp.json  CLAUDE.md  README.md  README_EN.md  pyproject.toml
docs/superpowers/plans/: 2026-06-30-word-mcp-plan.md
docs/superpowers/specs/: 2026-06-30-word-mcp-design.md
scripts/: install.ps1
src/word_mcp/: __init__.py  com_errors.json  com_manager.py  locator.py  models.py  server.py  utils.py
src/word_mcp/tools/: __init__.py  layout.py  lifecycle.py  macro.py  operations.py  self_optimize.py  structure.py  tables.py  text.py  vba.py
tests/: __init__.py  conftest.py  test_com_manager.py  test_lifecycle.py  test_operations.py  test_structure_locator.py  test_vba.py
